Fixing overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -110,9 +110,3 @@ li {
     background-position: 0% 50%;
   }
 }
-
-::-webkit-scrollbar {
-  width: 0px;
-  height: 0px;
-  background: transparent;
-}
