--- a/components/authentication/sign-in.module.css
+++ b/components/authentication/sign-in.module.css
@@ -63,7 +63,7 @@
   align-items: center;
   gap: 50px;
 
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .signin-body h1 {
