--- a/components/message-window/message-output.module.css
+++ b/components/message-window/message-output.module.css
@@ -5,5 +5,5 @@
 
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow: auto;
 }
